--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,7 +19,7 @@
 	<header>
 	    <div class="container">
 		    <div class="logo col-md-5 col-sm-5 col-xs-8">
-                <a href="index.html"><img src="images/Globo-Logo-white.svg" alt="logo"/></a><span class="text">MANIACALLY TAKING TECH TO THE GLOBE</span>
+                <a href="index.ejs"><img src="images/Globo-Logo-white.svg" alt="logo"/></a><span class="text">MANIACALLY TAKING TECH TO THE GLOBE</span>
 			</div>
 			<div class="mobile-togle col-md-12 col-sm-12 col-xs-12">
         <nav class="navbar navbar-default" role="navigation">
@@ -184,7 +184,7 @@ there in the future</p>
 <div class="container">
 <div class="main-footer col-md-12 col-xs-12">
 <div class="foter-logo col-md-3 col-sm-3 col-xs-2">
-<a href="index.html"><img class="desktop" src="images/Globo-Logo-white-footer.svg"><img class="mobileImg" src="images/G.png">
+<a href="index.ejs"><img class="desktop" src="images/Globo-Logo-white-footer.svg"><img class="mobileImg" src="images/G.png">
     </a>
 </div>
 <div class="links col-md-5 col-md-5 col-xs-10">
