finish security and third-party APIs-07.09.22

--- a/src/views/session.ejs
+++ b/src/views/session.ejs
@@ -1,7 +1,8 @@
 <html>
     <body>
         <%=session.title%> <br>
-        <%=session.speakers[0].name%> <br>
+        <%=session.speaker.name%> <br>
+        Speaker Bio: <%=session.speaker.bio%> <p>
         <%=session.description%> <br>
     </body>
 </html>
